objects/External_Unique_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indirect lookup Relationship</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Unique Objects</relationshipLabel>
        <relationshipName>External_Unique_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Unique_Num__c</fullName>
        <externalId>true</externalId>
        <label>External Unique Num</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_text_field__c</fullName>
        <label>Other text field</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>External Unique Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>External Unique Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Unique Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>